--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
     <!-- About Section -->
     <section id="about">
         <h2>About 3Leathers</h2>
-        <p>Welcome to 3Leathers, where we craft custom leather goods with passion and care. Each piece is handmade using high-quality vegetable-tanned leather.</p>
+        <p>
+  No machines. No shortcuts.<br>
+  Every product at 3Leathers is made entirely by hand — from cutting and skiving to stitching and finishing. Just traditional tools, skilled hands, and a deep respect for the craft. It takes longer, but it’s worth it.
+</p>
         <!-- Add more about text here -->
     </section>
 
