--- a/index.html
+++ b/index.html
@@ -130,10 +130,9 @@
         <h2>Gallery</h2>
         <div class="gallery">
             <!-- Replace placeholder images with your own -->
-            <img src="placeholder1.jpg" alt="Leather Bag Example">
-            <img src="placeholder2.jpg" alt="Leather Belt Example">
-            <img src="placeholder3.jpg" alt="Leather Wallet Example">
-            <img src="placeholder4.jpg" alt="Leather Holster Example">
+           
+            <img src="images/phone-case-min.jpg" alt="Handmade Leather Phone Case">
+    
         </div>
     </section>
 
