--- a/index.html
+++ b/index.html
@@ -130,9 +130,7 @@
         <h2>Gallery</h2>
         <div class="gallery">
             <!-- Replace placeholder images with your own -->
-           
-            <img src="images/phone-case-min.jpg" alt="Handmade Leather Phone Case">
-    
+            <img src="images/Phone%20Case-min.jpeg" alt="Handmade Leather Phone Case">
         </div>
     </section>
 
