--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
     <section id="gallery">
   <h2>Gallery</h2>
   <div class="gallery">
-    <img src="images/phone-case-min.jpeg" alt="Handmade Leather Phone Case">
+    <img src="images/phone-case-min.jpeg" alt="Handmade Leather Phone Case" style="width:200px; height:auto; border: 1px solid red;">
+
   </div>
 </section>
 
