--- a/admin/index.html
+++ b/admin/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="nc-root"></div>
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script>CMS.init({ config: { backend: { name: "github", repo: "wwl3leathers/wwl3leathers.github.io", branch: "main" } } });</script>
   </body>
 </html>
