--- a/admin/index.html
+++ b/admin/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="nc-root"></div>
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script src="https://unpkg.com/decap-cms@3.0.13/dist/decap-cms.js"></script>
     <script>CMS.init({ config: { backend: { name: "github", repo: "wwl3leathers/wwl3leathers.github.io", branch: "main" } } });</script>
   </body>
 </html>
