--- a/admin/index.html
+++ b/admin/index.html
@@ -8,13 +8,6 @@
   </head>
   <body>
     <div id="nc-root"></div>
-
-    <!-- Use a fixed stable Decap CMS build -->
-    <script src="https://unpkg.com/decap-cms@3.0.10/dist/decap-cms.js?v=2"></script>
-
-    <!-- Force explicit CMS.init call to avoid React node error -->
-    <script>
-      CMS.init();
-    </script>
+    <script src="https://unpkg.com/decap-cms@3.0.10/dist/decap-cms.js"></script>
   </body>
 </html>
