--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3Leathers - Home</title>
+    <title>3Leathers — Custom Leather by Walter Lewis III
+</title>
     <style>
         :root {
             --primary-color: #8B4513; /* Leather brown */
