--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         <a href="shop.html">Shop</a>
         <a href="faq.html">FAQ</a>
     </nav>
+    <h1 style="text-align:center; color:white; margin-top:20px;">Handmade Leather Goods — Built to Last</h1>
 
     <!-- About Section -->
     <section id="about">
