--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
         <a href="shop.html">Shop</a>
         <a href="faq.html">FAQ</a>
     </nav>
-    <h1 style="text-align:center; color:white; margin-top:20px;">Handmade Leather Goods — Built to Last</h1>
+    <h1 style="text-align:center; color:#111; background: rgba(245,245,220,0.9); padding: 12px 16px; border-radius: 8px; margin: 20px auto; max-width: 1000px;"> 
+        Handmade Leather Goods — Built to Last</h1>
 
     <!-- About Section -->
     <section id="about">
