--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
         <a href="shop.html">Shop</a>
         <a href="faq.html">FAQ</a>
     </nav>
-    <h1 style="text-align:center; color:#111; background: rgba(245,245,220,0.9); padding: 12px 16px; border-radius: 8px; margin: 20px auto; max-width: 1000px;"> 
-        Handmade Leather Goods — Built to Last</h1>
+    <h1 style="text-align:center; color:#2c1b0e; background-color:rgba(255,255,255,0.8); padding:20px; border-radius:8px; margin:20px auto; max-width:1000px; font-weight:bold;">
+  Handmade Leather Goods — Built to Last
+</h1>
 
     <!-- About Section -->
     <section id="about">
