--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3Leathers — Custom Leather by Walter Lewis III</title>
+    <meta name="description" content="3Leathers — handmade leather goods and custom creations by Walter Lewis III in Bridgeport, West Virginia. Belts, wallets, holsters, and unique leather gifts built to last.">
+<meta name="keywords" content="WV leather, West Virginia crafts, Bridgeport leatherwork, custom leather goods, handmade leather, WV artisan, WV custom creations, 3Leathers, Walter Lewis III, local craftsman, leather belts, leather wallets, leather holsters, leather gifts, made in WV">
+<meta name="author" content="Walter Lewis III">
+<meta name="robots" content="index, follow">
+<meta property="og:title" content="3Leathers — Handmade Leather Goods in West Virginia">
+<meta property="og:description" content="Handmade leather goods and custom creations by Walter Lewis III — Bridgeport WV. Quality leatherwork built to last.">
+<meta property="og:url" content="https://3leathers.com">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="en_US">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="3Leathers — WV Handmade Leather Goods">
+<meta name="twitter:description" content="Custom leather creations and artisan crafts made in Bridgeport, WV.">
     <style>
         :root {
             --primary-color: #8B4513; /* Leather brown */
