--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <script>
     function checkPass() {
-      const allowed = "devonly"; // ← change this to any password you like
+      const allowed = "lewis"; // ← change this to any password you like
       const input = document.getElementById("pass").value;
       if (input === allowed) {
         window.location.href = "app.html";
