--- a/app.html
+++ b/app.html
@@ -16,98 +16,8 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="3Leathers — WV Handmade Leather Goods">
 <meta name="twitter:description" content="Custom leather creations and artisan crafts made in Bridgeport, WV.">
-    <style>
-        :root {
-            --primary-color: #8B4513; /* Leather brown */
-            --secondary-color: rgba(245, 245, 220, 0.9); /* Beige */
-            --font-family: Arial, sans-serif;
-        }
 
-        body {
-            margin: 0;
-            font-family: var(--font-family);
-            background: url('backdrop.jpg') no-repeat center center fixed;
-            background-size: cover;
-            color: #333;
-        }
-
-        /* Personal Contact Section */
-        #contact {
-            background-color: var(--secondary-color);
-            padding: 10px;
-            text-align: center;
-        }
-
-        #contact p {
-            margin: 4px 0;
-        }
-
-        /* Navigation Bar */
-        nav {
-            background-color: rgba(139, 69, 19, 0.95);
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 14px 20px;
-            display: block;
-        }
-
-        nav a:hover {
-            background-color: rgba(255, 255, 255, 0.2);
-        }
-
-        /* Sections */
-        section {
-            background-color: rgba(245, 245, 220, 0.85);
-            margin: 20px auto;
-            padding: 20px;
-            max-width: 1000px;
-            border-radius: 10px;
-        }
-
-        /* Gallery Layout */
-        .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            justify-content: center;
-        }
-
-        .gallery img {
-            width: 200px;
-            height: auto;
-            border-radius: 5px;
-        }
-
-        /* Donations Section */
-        .donations {
-            text-align: center;
-        }
-
-        .donations img {
-            width: 120px;
-            margin: 10px;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 600px) {
-            .gallery img {
-                width: 100%;
-            }
-
-            nav {
-                flex-direction: column;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css?v=3">
 </head>
 <body>
 
