--- a/app.html
+++ b/app.html
@@ -20,6 +20,19 @@
     <link rel="stylesheet" href="style.css?v=3">
 </head>
 <body>
+<!-- Site Header -->
+<header class="site-header">
+  <div class="header-inner">
+    <a class="brand" href="app.html">3Leathers</a>
+    <nav class="nav">
+      <a href="app.html">Home</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="donations.html">Donations</a>
+      <a href="payments.html">Payments</a>
+      <a href="comments.html">Comments</a>
+    </nav>
+  </div>
+</header>
 
     <!-- Personal Contact Section -->
     <div id="contact">
