--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <div class="bar"></div>
       <div class="bar"></div>
     </div>
-    <img id="logo" src="logo-min.jpg" alt="3Leathers Logo">
+    <img id="logo" src="Logo-min.jpg" alt="3Leathers Logo">
   </header>
 
   <nav id="sideMenu">
