--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #f5e8a3; /* pastel yellow */
-      background: url('workshop-background.jpg') no-repeat center center fixed;
+      background: url('images/workshop-background.jpg') ...) no-repeat center center fixed;
       background-size: cover;
       text-align: center;
       overflow-x: hidden;
@@ -131,7 +131,8 @@
       <div class="bar"></div>
       <div class="bar"></div>
     </div>
-    <img id="logo" src="Logo-min.jpg" alt="3Leathers Logo">
+    <img id="logo" src="images/Logo-min.jpg" alt="3Leathers Logo">
+
   </header>
 
   <nav id="sideMenu">
