--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #f5e8a3; /* pastel yellow */
-      background: url('/images/workshop-background.jpg?v=1') no-repeat center center fixed;
+      background: #000 url('/images/workshop-background.jpg?v=2') center center / cover no-repeat fixed;
  ...) no-repeat center center fixed;
       background-size: cover;
       text-align: center;
