--- a/index.html
+++ b/index.html
@@ -2,142 +2,128 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>3Leathers - Custom Leather by Walter Lewis III</title>
-
   <style>
+    /* Base */
+    :root {
+      --yellow: #f5e8a3;      /* pastel yellow text */
+      --glass: rgba(0,0,0,.45);/* readability layer */
+    }
+    * { box-sizing: border-box; }
+    html, body { height: 100%; }
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #f5e8a3; /* pastel yellow */
-      background: #000 url('/images/workshop-background.jpg?v=2') center center / cover no-repeat fixed;
- ...) no-repeat center center fixed;
-      background-size: cover;
-      text-align: center;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      color: var(--yellow);
+      background: #000 url('/images/workshop-background.jpg?v=3') center center / cover no-repeat fixed;
       overflow-x: hidden;
+      -webkit-font-smoothing: antialiased;
+      text-rendering: optimizeLegibility;
     }
+    /* Make sure all headings/links inherit the yellow by default */
+    h1, h2, h3, h4, h5, h6, p, a, li, span, small, strong, em { color: var(--yellow); }
+    a { text-decoration: none; }
+    a:hover { text-decoration: underline; }
 
+    /* Header */
     header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.6);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 20px;
-      box-sizing: border-box;
+      position: fixed; inset: 0 0 auto 0;
+      display: flex; align-items: center; justify-content: space-between;
+      padding: 10px 16px;
+      background: rgba(0,0,0,.6);
       z-index: 1000;
+      backdrop-filter: blur(4px);
+      border-bottom: 1px solid rgba(255,255,255,.06);
     }
+    /* Hamburger icon */
+    .menu-icon { width: 32px; height: 24px; display: grid; gap: 5px; cursor: pointer; }
+    .menu-icon div { height: 4px; background: var(--yellow); border-radius: 4px; }
+    /* Logo */
+    #logo { height: 56px; border-radius: 6px; }
 
-    #logo {
-      height: 60px;
-      border-radius: 6px;
+    /* Slide-out nav */
+    nav#sideMenu {
+      position: fixed; top: 0; left: -260px; height: 100%; width: 260px;
+      background: rgba(0,0,0,.92);
+      padding: 70px 16px 24px;
+      transition: left .25s ease;
+      z-index: 1200;
+      box-shadow: 2px 0 10px rgba(0,0,0,.45);
     }
+    nav#sideMenu.open { left: 0; }
+    nav#sideMenu a {
+      display: block; padding: 12px 10px; font-size: 18px; border-radius: 8px;
+    }
+    nav#sideMenu a:hover { background: rgba(255,255,255,.08); text-decoration: none; }
 
-    /* Hamburger Menu */
-    .menu-icon {
-      cursor: pointer;
-      width: 30px;
-      height: 22px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+    /* Main content */
+    main { padding: 120px 16px 80px; }
+    .content {
+      max-width: 900px; margin: 0 auto;
+      text-align: center;
+      background: var(--glass);
+      border: 1px solid rgba(255,255,255,.08);
+      border-radius: 14px;
+      padding: 24px 18px;
+      box-shadow: 0 10px 24px rgba(0,0,0,.35);
     }
-    .bar {
-      height: 4px;
-      width: 100%;
-      background-color: #f5e8a3;
-      border-radius: 4px;
-    }
+    h1 { font-size: clamp(28px, 4vw, 40px); margin: 0 0 6px; }
+    h2 { font-size: clamp(20px, 3vw, 28px); margin: 8px 0 12px; }
+    .lead { opacity: .95; line-height: 1.6; }
 
-    nav {
-      position: fixed;
-      left: -250px;
-      top: 0;
-      height: 100%;
-      width: 250px;
-      background: rgba(0, 0, 0, 0.9);
-      padding-top: 60px;
-      transition: left 0.3s ease;
-      box-shadow: 2px 0 5px rgba(0,0,0,0.5);
-    }
-    nav a {
-      display: block;
-      color: #f5e8a3;
-      text-decoration: none;
-      padding: 15px 25px;
-      font-size: 18px;
-      text-align: left;
-    }
-    nav a:hover {
-      background: rgba(255, 255, 255, 0.1);
-    }
-    .open { left: 0; }
-
-    main {
-      margin-top: 120px;
-      padding: 0 20px 80px;
-    }
-
-    h1 {
-      font-size: 36px;
-      margin-bottom: 10px;
-    }
-
-    h2 {
-      font-size: 28px;
-      margin-top: 40px;
-    }
-
-    .about {
-      max-width: 800px;
-      margin: 0 auto 50px;
-      font-size: 20px;
-      line-height: 1.6;
-    }
-
+    /* Gallery cards inline (placeholders) */
     .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-      margin-top: 30px;
+      display: grid; grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+      gap: 12px; margin-top: 16px;
     }
     .gallery img {
-      width: 200px;
-      height: 200px;
-      object-fit: cover;
-      border: 2px solid #f5e8a3;
-      border-radius: 8px;
+      width: 100%; height: 150px; object-fit: cover;
+      border-radius: 10px; border: 1px solid rgba(255,255,255,.12);
+      box-shadow: 0 6px 16px rgba(0,0,0,.35);
     }
 
-    footer {
-      position: relative;
-      bottom: 0;
-      width: 100%;
-      background: rgba(0,0,0,0.6);
-      padding: 20px 0;
-      text-align: right;
-      font-size: 14px;
-      color: #f5e8a3;
-      box-sizing: border-box;
+    /* Contact block top-right and bottom-right */
+    .contact-top {
+      text-align: right; margin-top: 6px; font-size: 14px; opacity: .95;
+    }
+    .contact-bottom {
+      position: fixed; right: 12px; bottom: 10px; z-index: 900;
+      background: rgba(0,0,0,.55);
+      border: 1px solid rgba(255,255,255,.08);
+      border-radius: 10px; padding: 10px 12px; font-size: 13px;
+      backdrop-filter: blur(3px);
     }
   </style>
 </head>
 <body>
+  <!-- Header with hamburger + logo -->
   <header>
-    <div class="menu-icon" onclick="toggleMenu()">
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
+    <div class="menu-icon" id="menuButton" aria-label="Open menu" role="button" tabindex="0" aria-controls="sideMenu" aria-expanded="false">
+      <div></div><div></div><div></div>
     </div>
-    <img id="logo" src="/images/Logo-min.jpg?v=1" alt="3Leathers Logo">
-
+    <img id="logo" src="/images/Logo-min.jpg?v=3" alt="3Leathers Logo" />
   </header>
 
-  <nav id="sideMenu">
-    <a href="#home">Home</a>
-    <a href="#shop">Shop</a>
-    <a href="#custom">Custom Requests</a>
-    <a href="#cart">
+  <!-- Slide-out menu -->
+  <nav id="sideMenu" aria-label="Site navigation">
+    <a href="#home" class="navlink">Home</a>
+    <a href="#shop" class="navlink">Shop</a>
+    <a href="#custom" class="navlink">Custom Requests</a>
+    <a href="#cart" class="navlink">Cart</a>
+    <a href="#faq" class="navlink">FAQ</a>
+  </nav>
+
+  <!-- Main content -->
+  <main id="home">
+    <div class="content">
+      <h1>3Leathers</h1>
+      <h2>Custom Leather by Walter Lewis III</h2>
+
+      <!-- Top-right contact block (inside content, aligned right) -->
+      <div class="contact-top">
+        Bridgeport, West Virginia · <a href="tel:+13046691412"> (304) 669-1412</a> ·
+        <a href="mailto:wwl3leathers@outlook.com">wwl3leathers@outlook.com</a>
+      </div>
+
+      <p class="lead" styl
