--- a/index.html
+++ b/index.html
@@ -4,97 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>3Leathers - Custom Leather by Walter Lewis III</title>
-  <style>
-    /* Base */
-    :root {
-      --yellow: #f5e8a3;      /* pastel yellow text */
-      --glass: rgba(0,0,0,.45);/* readability layer */
-    }
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
-    body {
-      margin: 0;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      color: var(--yellow);
-      background: #000 url('/images/workshop-background.jpg?v=3') center center / cover no-repeat fixed;
-      overflow-x: hidden;
-      -webkit-font-smoothing: antialiased;
-      text-rendering: optimizeLegibility;
-    }
-    /* Make sure all headings/links inherit the yellow by default */
-    h1, h2, h3, h4, h5, h6, p, a, li, span, small, strong, em { color: var(--yellow); }
-    a { text-decoration: none; }
-    a:hover { text-decoration: underline; }
-
-    /* Header */
-    header {
-      position: fixed; inset: 0 0 auto 0;
-      display: flex; align-items: center; justify-content: space-between;
-      padding: 10px 16px;
-      background: rgba(0,0,0,.6);
-      z-index: 1000;
-      backdrop-filter: blur(4px);
-      border-bottom: 1px solid rgba(255,255,255,.06);
-    }
-    /* Hamburger icon */
-    .menu-icon { width: 32px; height: 24px; display: grid; gap: 5px; cursor: pointer; }
-    .menu-icon div { height: 4px; background: var(--yellow); border-radius: 4px; }
-    /* Logo */
-    #logo { height: 56px; border-radius: 6px; }
-
-    /* Slide-out nav */
-    nav#sideMenu {
-      position: fixed; top: 0; left: -260px; height: 100%; width: 260px;
-      background: rgba(0,0,0,.92);
-      padding: 70px 16px 24px;
-      transition: left .25s ease;
-      z-index: 1200;
-      box-shadow: 2px 0 10px rgba(0,0,0,.45);
-    }
-    nav#sideMenu.open { left: 0; }
-    nav#sideMenu a {
-      display: block; padding: 12px 10px; font-size: 18px; border-radius: 8px;
-    }
-    nav#sideMenu a:hover { background: rgba(255,255,255,.08); text-decoration: none; }
-
-    /* Main content */
-    main { padding: 120px 16px 80px; }
-    .content {
-      max-width: 900px; margin: 0 auto;
-      text-align: center;
-      background: var(--glass);
-      border: 1px solid rgba(255,255,255,.08);
-      border-radius: 14px;
-      padding: 24px 18px;
-      box-shadow: 0 10px 24px rgba(0,0,0,.35);
-    }
-    h1 { font-size: clamp(28px, 4vw, 40px); margin: 0 0 6px; }
-    h2 { font-size: clamp(20px, 3vw, 28px); margin: 8px 0 12px; }
-    .lead { opacity: .95; line-height: 1.6; }
-
-    /* Gallery cards inline (placeholders) */
-    .gallery {
-      display: grid; grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-      gap: 12px; margin-top: 16px;
-    }
-    .gallery img {
-      width: 100%; height: 150px; object-fit: cover;
-      border-radius: 10px; border: 1px solid rgba(255,255,255,.12);
-      box-shadow: 0 6px 16px rgba(0,0,0,.35);
-    }
-
-    /* Contact block top-right and bottom-right */
-    .contact-top {
-      text-align: right; margin-top: 6px; font-size: 14px; opacity: .95;
-    }
-    .contact-bottom {
-      position: fixed; right: 12px; bottom: 10px; z-index: 900;
-      background: rgba(0,0,0,.55);
-      border: 1px solid rgba(255,255,255,.08);
-      border-radius: 10px; padding: 10px 12px; font-size: 13px;
-      backdrop-filter: blur(3px);
-    }
-  </style>
+  <link rel="stylesheet" href="style.css?v=5">
 </head>
 <body>
   <!-- Header with hamburger + logo -->
