--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>3Leathers - Custom Leather by Walter Lewis III</title>
-  <link rel="stylesheet" href="style.css?v=5">
+
+  <!-- External stylesheet -->
+  <link rel="stylesheet" href="style.css?v=6" />
 </head>
+
 <body>
   <!-- Header with hamburger + logo -->
   <header>
     <div class="menu-icon" id="menuButton" aria-label="Open menu" role="button" tabindex="0" aria-controls="sideMenu" aria-expanded="false">
       <div></div><div></div><div></div>
     </div>
-    <img id="logo" src="/images/Logo-min.jpg?v=3" alt="3Leathers Logo" />
+    <img id="logo" src="/images/Logo-min.jpg?v=6" alt="3Leathers Logo" />
   </header>
 
   <!-- Slide-out menu -->
@@ -37,3 +40,5 @@
       </div>
 
       <p class="lead" styl
+</body>
+</html>
