--- a/index.html
+++ b/index.html
@@ -38,6 +38,43 @@
         Bridgeport, West Virginia · <a href="tel:+13046691412"> (304) 669-1412</a> ·
         <a href="mailto:wwl3leathers@outlook.com">wwl3leathers@outlook.com</a>
       </div>
+      <p class="lead" style="margin-top:12px;">
+  No machines. No shortcuts. Just handmade craftsmanship built to last.
+  Every item is cut, stitched, and finished by hand. Rugged. Refined. Personal.
+</p>
+
+<!-- Featured pieces (cards now; swap to photos later) -->
+<div class="gallery" aria-label="Featured pieces">
+  <div class="card">Belt — oil-tanned, custom size</div>
+  <div class="card">Phone case — hand-stitched</div>
+  <div class="card">Wallet — veg-tan, burnished edges</div>
+  <div class="card">Holster — wet-formed, dyed</div>
+</div>
+
+<section style="margin-top:18px;">
+  <h2>Support the Craft</h2>
+  <p class="lead">If you want to help keep traditional craftsmanship alive:</p>
+  <p><strong>Cash App:</strong> $unclebutch3 &nbsp;|&nbsp;
+     <strong>PayPal:</strong> <a href="https://paypal.me/3Leathers">paypal.me/3Leathers</a></p>
+</section>
+
+<section id="shop" style="margin-top:28px">
+  <h2>Shop</h2>
+  <p class="lead">Catalog coming online soon. Belts, wallets, holsters, cases, and custom pieces.</p>
+</section>
+<section id="custom" style="margin-top:18px">
+  <h2>Custom Requests</h2>
+  <p class="lead">Have an idea? Describe it and we’ll build it. Fit, leather, dye, hardware — your call.</p>
+</section>
+<section id="cart" style="margin-top:18px">
+  <h2>Cart</h2>
+  <p class="lead">Checkout will appear here when the shop goes live.</p>
+</section>
+<section id="faq" style="margin-top:18px; margin-bottom:40px">
+  <h2>FAQ</h2>
+  <p class="lead">Care, sizing, lead times, and shipping info will be posted here.</p>
+</section>
+
 <script>
   (function () {
     const menu  = document.getElementById('sideMenu');
