--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
   <div class="card">Holster — wet-formed, dyed</div>
 </div>
 
-<section style="margin-top:18px;">
+<section id="support" style="margin-top:18px; margin-bottom:40px;">
   <h2>Support the Craft</h2>
   <p class="lead">If you want to help keep traditional craftsmanship alive:</p>
-  <p><strong>Cash App:</strong> $unclebutch3 &nbsp;|&nbsp;
-     <strong>PayPal:</strong> <a href="https://paypal.me/3Leathers">paypal.me/3Leathers</a></p>
+  <p><strong>Cash App:</strong> $unclebutch3 &nbsp;&nbsp; <strong>PayPal:</strong> paypal.me/3Leathers</p>
 </section>
 
 <section id="shop" style="margin-top:28px">
