--- a/shop.html
+++ b/shop.html
@@ -1,275 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3Leathers - Shop</title>
-    <style>
-        :root {
-            --primary-color: #8B4513;
-            --secondary-color: rgba(245, 245, 220, 0.9);
-            --font-family: Arial, sans-serif;
-        }
-
-        body {
-            margin: 0;
-            font-family: var(--font-family);
-            background: url('backdrop.jpg') no-repeat center center fixed;
-            background-size: cover;
-            color: #333;
-        }
-
-        /* Personal Contact */
-        #contact {
-            background-color: var(--secondary-color);
-            padding: 10px;
-            text-align: center;
-        }
-
-        #contact p {
-            margin: 4px 0;
-        }
-
-        /* Navigation Bar */
-        nav {
-            background-color: rgba(139, 69, 19, 0.95);
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 14px 20px;
-            display: block;
-        }
-
-        nav a:hover {
-            background-color: rgba(255, 255, 255, 0.2);
-        }
-
-        /* Dropdown Menu */
-        .dropdown {
-            margin: 20px auto;
-            text-align: center;
-        }
-
-        .dropdown select {
-            padding: 10px;
-            font-size: 16px;
-            border: 2px solid var(--primary-color);
-            border-radius: 5px;
-        }
-
-        /* Sections */
-        section {
-            background-color: rgba(245, 245, 220, 0.85);
-            margin: 20px auto;
-            padding: 20px;
-            max-width: 1000px;
-            border-radius: 10px;
-        }
-
-        .items {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: center;
-        }
-
-        .item {
-            width: 220px;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 10px;
-            border-radius: 8px;
-            text-align: center;
-        }
-
-        .item img {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
-
-        .item input[type="text"] {
-            width: 100%;
-            margin: 5px 0;
-            padding: 6px;
-        }
-
-        .item button {
-            padding: 8px;
-            background-color: var(--primary-color);
-            color: white;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
-        .item button:hover {
-            background-color: #5a2e0c;
-        }
-
-        /* Cart Section */
-        #cart form {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        #cart input[type="text"],
-        #cart input[type="email"] {
-            padding: 8px;
-            border: 1px solid #888;
-            border-radius: 5px;
-        }
-
-        #cart .total {
-            font-weight: bold;
-            margin-top: 10px;
-        }
-
-        /* Payment Section */
-        .payment-options {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .payment-options img {
-            width: 80px;
-            margin: 10px;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 600px) {
-            .items {
-                flex-direction: column;
-                align-items: center;
-            }
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Shop · 3Leathers</title>
+  <link rel="stylesheet" href="style.css?v=6" />
 </head>
 <body>
 
-    <!-- Personal Contact -->
-    <div id="contact">
-        <p><strong>Name:</strong> Walter Lewis III</p>
-        <p><strong>City:</strong> Bridgeport</p>
-        <p><strong>State:</strong> WV</p>
-        <p><strong>Phone:</strong> (304) 669-1412</p>
-        <p><strong>Email:</strong> wwl3leathers@outlook.com</p>
-    </div>
+  <!-- Hamburger -->
+  <div class="menu-icon" id="menuButton"
+       aria-label="Open menu" role="button" tabindex="0"
+       aria-controls="sideMenu" aria-expanded="false"
+       style="position:fixed; top:14px; left:14px; z-index:2000;">
+    <div></div><div></div><div></div>
+  </div>
 
-    <!-- Navigation -->
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="shop.html">Shop</a>
-        <a href="faq.html">FAQ</a>
-    </nav>
+  <!-- Header / Logo -->
+  <header>
+    <a href="index.html#top" aria-label="Back to Home">
+      <img id="logo" src="/images/Logo-min.jpg?v=6" alt="3Leathers Logo" />
+    </a>
+  </header>
 
-    <!-- Dropdown Menu -->
-    <div class="dropdown">
-        <label for="categories"><strong>Choose a Section:</strong></label>
-        <select id="categories" onchange="location = this.value;">
-            <option value="#bags">Bags</option>
-            <option value="#belts">Belts</option>
-            <option value="#holsters">Holsters</option>
-            <option value="#wallets">Wallets</option>
-            <option value="#special-order">Special Order</option>
-            <option value="#cart">Cart</option>
-        </select>
-    </div>
+  <!-- Slide-out menu -->
+  <nav id="sideMenu" aria-label="Site navigation">
+    <a href="index.html#top" class="navlink">Home</a>
+    <a href="index.html#support" class="navlink">Support the Craft</a>
+    <a href="shop.html"   class="navlink">Shop</a>
+    <a href="custom.html" class="navlink">Custom Requests</a>
+    <a href="cart.html"   class="navlink">Cart</a>
+    <a href="faq.html"    class="navlink">FAQ</a>
+  </nav>
 
-    <!-- Bags Section -->
-    <section id="bags">
-        <h2>Bags</h2>
-        <div class="items">
-            <div class="item">
-                <img src="placeholder-bag.jpg" alt="Bag Example">
-                <p>Price: $150</p>
-                <input type="text" placeholder="Add comment...">
-                <button>Add to Cart</button>
-            </div>
-        </div>
-    </section>
+  <main>
+    <div class="content">
+      <h1>Shop</h1>
+      <p class="lead">Handmade leather goods. Built to last.</p>
 
-    <!-- Belts Section -->
-    <section id="belts">
-        <h2>Belts</h2>
-        <div class="items">
-            <div class="item">
-                <img src="placeholder-belt.jpg" alt="Belt Example">
-                <p>Price: $75</p>
-                <input type="text" placeholder="Add comment...">
-                <button>Add to Cart</button>
-            </div>
-        </div>
-    </section>
-
-    <!-- Holsters Section -->
-    <section id="holsters">
-        <h2>Holsters</h2>
-        <div class="items">
-            <div class="item">
-                <img src="placeholder-holster.jpg" alt="Holster Example">
-                <p>Price: $120</p>
-                <input type="text" placeholder="Add comment...">
-                <button>Add to Cart</button>
-            </div>
-        </div>
-    </section>
-
-    <!-- Wallets Section -->
-    <section id="wallets">
+      <!-- Wallets (4 styles, ≤2 images each) -->
+      <section>
         <h2>Wallets</h2>
-        <div class="items">
-            <div class="item">
-                <img src="placeholder-wallet.jpg" alt="Wallet Example">
-                <p>Price: $60</p>
-                <input type="text" placeholder="Add comment...">
-                <button>Add to Cart</button>
+
+        <div class="gallery" aria-label="Wallet styles">
+          <!-- Style 1 -->
+          <figure class="card">
+            <div class="pair">
+              <img src="/images/products/wallets/style1-a.jpg" alt="Wallet Style 1 — photo A">
+              <img src="/images/products/wallets/style1-b.jpg" alt="Wallet Style 1 — photo B">
             </div>
-        </div>
-    </section>
+            <figcaption>Style 1</figcaption>
+          </figure>
 
-    <!-- Special Order Section -->
-    <section id="special-order">
-        <h2>Special Order</h2>
-        <p>Describe your custom order below.</p>
-        <!-- Placeholder for custom order form -->
-        <div style="background: #fff; padding: 10px; border: 1px dashed #8B4513;">
-            <p><em>Custom Order Form Placeholder</em></p>
-        </div>
-    </section>
+          <!-- Style 2 -->
+          <figure class="card">
+            <div class="pair">
+              <img src="/images/products/wallets/style2-a.jpg" alt="Wallet Style 2 — photo A">
+              <img src="/images/products/wallets/style2-b.jpg" alt="Wallet Style 2 — photo B">
+            </div>
+            <figcaption>Style 2</figcaption>
+          </figure>
 
-    <!-- Cart Section -->
-    <section id="cart">
-        <h2>Cart</h2>
-        <form>
-            <input type="text" placeholder="Name" required>
-            <input type="text" placeholder="Phone" required>
-            <input type="email" placeholder="Email" required>
-            <input type="text" placeholder="Mailing Address" required>
-            <div class="total">Total: $0.00</div>
-            <label>
-                <input type="checkbox"> Pick up at location
-            </label>
-            <label>
-                <input type="checkbox"> Add shipping cost
-            </label>
-        </form>
+          <!-- Style 3 -->
+          <figure class="card">
+            <div class="pair">
+              <img src="/images/products/wallets/style3-a.jpg" alt="Wallet Style 3 — photo A">
+              <img src="/images/products/wallets/style3-b.jpg" alt="Wallet Style 3 — photo B">
+            </div>
+            <figcaption>Style 3</figcaption>
+          </figure>
 
-        <div class="payment-options">
-            <p>Accepted Payment Methods:</p>
-            <img src="credit-cards-placeholder.png" alt="Accepted Cards">
-            <img src="paypal-placeholder.png" alt="PayPal">
-            <img src="cashapp-placeholder.png" alt="Cash App">
+          <!-- Style 4 -->
+          <figure class="card">
+            <div class="pair">
+              <img src="/images/products/wallets/style4-a.jpg" alt="Wallet Style 4 — photo A">
+              <img src="/images/products/wallets/style4-b.jpg" alt="Wallet Style 4 — photo B">
+            </div>
+            <figcaption>Style 4</figcaption>
+          </figure>
         </div>
-    </section>
+      </section>
+
+      <!-- Purses (2 styles) -->
+      <section>
+        <h2>Purses</h2>
+        <div class="gallery" aria-label="Purse styles">
+          <figure class="card">
+            <div class="pair">
+              <img src="/images/products/purses/style1-a.jpg" alt="Purse Style 1 — photo A">
+              <img src="/images/products/purses/style1-b.jpg" alt="Purse Style 1 — photo B">
+            </div>
+            <figcaption>Style 1</figcaption>
+          </figure>
+
+          <figure class="card">
+            <div class="pair">
+              <img src="/images/products/purses/style2-a.jpg" alt="Purse Style 2 — photo A">
+              <img src="/images/products/purses/style2-b.jpg" alt="Purse Style 2 — photo B">
+            </div>
+            <figcaption>Style 2</figcaption>
+          </figure>
+        </div>
+      </section>
+
+      <!-- Gun Holsters (3 styles) -->
+      <section>
+        <h2>Gun Holsters</h2>
+        <div class="gallery" aria-label="Holster styles">
+          <figure class="card">
+            <div class="pair">
+              <img src="/images/products/holsters/style1-a.jpg" alt="Holster Style 1 — photo A">
+              <img src="/images/products/holsters/style1-b.jpg" alt="Holster Style 1 — photo B">
+            </div>
+            <figcaption>Style 1</figcaption>
+          </figure>
+
+          <figure class="card">
+            <div class="pair">
+              <img src="/images/products/holsters/style2-a.jpg" alt="Holster Style 2 — photo A">
+              <img src="/images/products/holsters/style2-b.jpg" alt="Holster Style 2 — photo B">
+            </div>
+            <figcaption>Style 2</figcaption>
+          </figure>
+
+          <figure class="card">
+            <div class="pair">
+              <img src="/images/products/holsters/style3-a.jpg" alt="Holster Style 3 — photo A">
+              <img src="/images/products/holsters/style3-b.jpg" alt="Holster Style 3 — photo B">
+            </div>
+            <figcaption>Style 3</figcaption>
+          </figure>
+        </div>
+      </section>
+
+      <!-- Phone Case (1 style) -->
+      <section>
+        <h2>Phone Case</h2>
+        <div class="gallery" aria-label="Phone case style">
+          <figure class="card">
+            <div class="pair">
+              <img src="/images/products/phone/style1-a.jpg" alt="Phone Case Style 1 — photo A">
+              <img src="/images/products/phone/style1-b.jpg" alt="Phone Case Style 1 — photo B">
+            </div>
+            <figcaption>Style 1</figcaption>
+          </figure>
+        </div>
+      </section>
+    </div>
+  </main>
+
+  <!-- Toggle script -->
+  <script>
+  (function () {
+    const menu = document.getElementById('sideMenu');
+    const btn  = document.getElementById('menuButton');
+    const links = document.querySelectorAll('#sideMenu .navlink');
+    function toggle(force) {
+      const willOpen = (typeof force === 'boolean') ? force : !menu.classList.contains('open');
+      menu.classList.toggle('open', willOpen);
+      btn.setAttribute('aria-expanded', String(willOpen));
+    }
+    btn.addEventListener('click', () => toggle());
+    btn.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); toggle(); }
+    });
+    links?.forEach(a => a.addEventListener('click', () => toggle(false)));
+    document.addEventListener('click', (e) => {
+      if (!menu.contains(e.target) && !btn.contains(e.target)) toggle(false);
+    });
+  })();
+  </script>
 
 </body>
 </html>
