--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
     <div></div><div></div><div></div>
   </div>
 
-  <!-- Header with logo only (logo is already positioned by #logo rules in style.css) -->
   <header>
-    <img id="logo" src="/images/Logo-min.jpg?v=6" alt="3Leathers Logo" />
-  </header>
+  <div class="menu-icon" id="menuButton"
+       aria-label="open menu" role="button" tabindex="0" aria-expanded="false">
+    <div></div><div></div><div></div>
+  </div>
+
+  <img id="logo" src="/images/Logo-min.jpg?v=6" alt="3Leathers Logo" />
+</header>
 
   <!-- Slide-out menu -->
   <nav id="sideMenu" aria-label="Site navigation">
