--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <div class="menu-icon" id="menuButton"
        aria-label="Open menu" role="button" tabindex="0"
        aria-controls="sideMenu" aria-expanded="false"
-       style="position:fixed; top:14px; left:14px; z-index:2000;">
+       style="position:fixed;top:10px; right:10px; z-index:2000;"
+
     <div></div><div></div><div></div>
   </div>
 
